cmake_minimum_required(VERSION 3.24)
project(aoc2023)

set(CMAKE_CXX_STANDARD 17)

add_executable(aoc2023
#        01.cpp
#        02.cpp
        03.cpp
#        04.cpp
#        05.cpp
#        06.cpp
#        07.cpp
#        08.cpp
#        09.cpp
#        10.cpp
#        11.cpp
#        12.cpp
#        13.cpp
#        14.cpp
#        15.cpp
#        16.cpp
#        17.cpp
#        18.cpp
#        19.cpp
#        20.cpp
#        21.cpp
#        22.cpp
#        23.cpp
#        24.cpp
#        25.cpp
        )
